packages/react-components/src/components/button/button.module.css
@import '../../core/utils/vibrancy.css';

.Button {
  box-sizing: border-box;
  user-select: none;
  -webkit-touch-callout: none;
  margin: 0;
  cursor: pointer;
  font-family: inherit;
  display: inline-flex;
  align-items: center;
  min-inline-size: min-content;
  justify-content: center;
  text-decoration: none;
  white-space: nowrap;
  border: 0;
  appearance: none;
  font-weight: 600;
  position: relative;
  overflow: hidden;
  border-radius: env(--radius-4);
  background: none;
  grid-gap: env(--space-8);

  /* Sizes */

  &[data-button-dimension='big'] {
    padding: 0.55rem env(--space-24) 0.66rem;
    font-size: env(--font-size-18);
    block-size: env(--space-48);
  }

  &[data-button-dimension='regular'] {
    padding: 0.33rem env(--space-16) env(--space-8);
    font-size: env(--font-size-16);
    block-size: env(--space-40);
  }

  &[data-button-dimension='small'] {
    font-size: env(--font-size-14);
    padding: 0 env(--space-4) 0.11rem;
    block-size: env(--space-24);
    grid-gap: env(--space-4);
  }

  /* Types */

  &[data-button-kind='primary'] {
    background: var(--cta-default);
    color: var(--cta-foreground);

    &:not([aria-pressed='true'], [aria-disabled='true']):is(:active) {
      background: var(--cta-dark);
    }

    &:where([aria-pressed='true']),
    &:where([aria-pressed='true']:active) {
      background: hsl(env(--color-red-50));
      color: hsl(env(--color-support-white));
    }
  }

  &[data-button-kind='secondary'] {

    @mixin vibrancy;

    background-color: var(--global-vibrancy-background);
    color: var(--global-vibrancy-foreground);

    &:not([aria-pressed='true'], [aria-disabled='true']):is(:active) {
      background-color: var(--global-vibrancy-background-hard);
      color: var(--global-vibrancy-foreground);
    }

    &:where([aria-pressed='true']),
    &:where([aria-pressed='true']:active) {
      color: var(--dimmed-0);
      background: var(--dimmed-7);
    }
  }

  &[data-button-kind='flat'] {
    color: var(--global-vibrancy-foreground);

    &:not([aria-pressed='true'], [aria-disabled='true']):is(:active) {
      background-color: var(--global-vibrancy-background-hard);
    }

    &:is(:hover, :focus) {

      @mixin vibrancy;

      background-color: var(--global-vibrancy-background);
      color: var(--global-vibrancy-foreground);
    }

    &:where([aria-pressed='true']),
    &:where([aria-pressed='true']:is(:active, :focus)) {
      color: var(--dimmed-0);
      background: var(--dimmed-7);
    }
  }

  /* Styles */

  &[data-button-fullwidth='true'] {
    inline-size: 100%;
  }

  &[data-button-icon-position='right'] {
    flex-direction: row-reverse;
  }

  &[aria-disabled='true'],
  &[aria-disabled='true']:is(:hover, :focus, :active) {

    @mixin vibrancy;

    color: var(--global-disabled-foreground);
    background-color: var(--global-disabled-background);
    cursor: not-allowed;
  }

  &[aria-busy='true'] > :not(.SpinnerIndicator) {
    visibility: hidden;
  }
}

.SpinnerIndicator {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  display: grid;
  place-content: center;
}


.ButtonsGroup {
  display: inline-flex;

  & > *:not(:first-child, :last-child, :only-of-type) {
    border-radius: 0;
  }

  & > *:first-child:not(:only-of-type) {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    box-shadow: inset -1px 0 0 hsl(0deg 0% 40% / 10%);
  }

  & > *:last-child:not(:only-of-type) {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    box-shadow: inset 1px 0 0 hsl(0deg 0% 40% / 10%);
  }
}

